syntax = "proto3";
option go_package = "github.com/viperadnan-git/gogpm/internal/pb";

message MoveToTrash {
  int64 field2 = 2; // constant: 1
  repeated string item_keys = 3;
  int64 field4 = 4; // constant: 1
  Field8 field8 = 8;
  Field9 field9 = 9;

  message Field8 {
    Field4 field4 = 4;
    message Field4 {
      Empty field2 = 2;
      Field3 field3 = 3;
      Empty field4 = 4;
      Field5 field5 = 5;
      message Field3 { Empty field1 = 1; }
      message Field5 { Empty field1 = 1; }
      message Empty {}
    }
  }
  message Field9 {
    int64 field1 = 1; // constant: 5
    Field2 field2 = 2;
    message Field2 {
      int64 field1 = 1; // client_version_code
      string field2 = 2; // android_api_version as string
    }
  }
}
